layout bug

--- a/app/assets/stylesheets/refinery/bookings/_datepicker.css.scss
+++ b/app/assets/stylesheets/refinery/bookings/_datepicker.css.scss
@@ -69,7 +69,6 @@ $booked_color: #ee1100;
   .datepickerGoPrev a,
   .datepickerMonth a {
   	text-align: center;
-  	height: 100%;
   }
   .datepickerGoNext a {
   	float: right;
